Feat(HUGE): ReSync Scoreboards & Tabs.